<resources>
    <string name="app_name">Exemplo2aN</string>
    <string name="txt_valor">valor:</string>
    <string name="txt_gorjeta">gorjeta:</string>
    <string name="txt_total">total:</string>
    <string name="txt_re">RE:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_dataadmissao">Data de Admissão:</string>
    <string name="txt_salario">Salário:</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_limpar">Limpar</string>
    <string name="txt_excluir">Excluir</string>
    <string name="txt_buscarre">Buscar pelo RE</string>
    <string name="txt_atualizar">Atualizar</string>
    <string name="txt_listar">Listar</string>
    <string name="txt_botaoGorjeta">Gorjeta</string>
    <string name="txt_bancodedados">Banco de dados</string>
    <string name="txt_desenho">Desenho</string>
    <string name="txt_sensores">Sensores</string>
    <string name="txt_mapas">Mapas</string>
    <string name="txt_http">HTTP</string>
</resources>